<resources>
    <string name="app_name">List Of Action</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="reward_placeHolder">%1d円</string>


    <!-- メニューアイテム-->
    <string name="action_save">保存</string>
    <string name="action_cancel">破棄</string>
    <string name="action_back">戻る</string>
    <string name="action_append">追加</string>
    <string name="action_update">更新</string>
    <string name="action_edit">アイテム編集</string>
    <string name="delete_item">アイテム削除</string>
    <string name="edit_category">カテゴリ編集</string>
    <string name="navigate_to_list_week">7日間のリスト</string>
    <string name="make_list_from_resource">デフォルトのアイテムをロードする</string>
    <string name="make_category_from_items">アイテムからカテゴリに反映する</string>
    <string name="edit_new_category">新しいカテゴリ名を入れて下さい</string>

    <!-- Layout画面用文字列 -->
    <string name="test_reward">1200円</string>
    <string name="test_item_title">毎日のルーチン</string>
    <string name="test_dateStr_Jp">2021年8月22日</string>
    <string name="test_Category_title">運動</string>

    <string name="done">○</string>
    <string name="undone">×</string>
    <string name="category_all">全て</string>

    <string name="titleCaption">行うことのタイトル</string>
    <string name="rewardCaption">達成時の報酬</string>
    <string-array name="default_item_list">
        <item>本日の記録;30;記録;2021/6/10</item>
        <item>明日の一日の予定;30;記録</item>
        <item>腕立て20;30;運動;2021/6/10,2021/6/22,2021/6/23,2021/6/24,2021/7/12</item>
        <item>腹筋20;30;運動;2021/6/9,2021/6/13,2021/6/28,2021/6/29</item>
        <item>腕立て2セット目;30;運動;2021/6/10,2021/6/11,2021/6/12,2021/6/22,2021/6/23</item>
        <item>勉強1ポモドーロ;100;運動;2021/6/8</item>
        <item>プログラム1ポモドーロ;30;その他;2021/6/11,2021/6/12,2021/6/13,2021/6/22,2021/6/23,2021/6/26,2021/6/27</item>
        <item>朝目が覚めたらすぐに起きる;100;生活;2021/6/7,2021/6/28</item>
        <item>朝スマホを触らない;30;生活;2021/6/28</item>
        <item>6時台に自転車に乗り出発;30;生活;2021/6/7</item>
        <item>腹筋50;100;運動;2021/6/23,2021/7/12</item>
        <item>腹筋100;200;運動;2021/6/23,2021/6/27</item>
        <item>ジャブストレートワンツー;50;運動;2021/6/27</item>
        <item>プロテイン飲む;30;生活;2021/6/9,2021/6/10,2021/6/11,2021/6/24</item>
        <item>股関節の柔軟;30;運動</item>
        <item>自転車の掃除;30;整理</item>
        <item>家計;60;記録</item>
        <item>2週間後まで外来予習;30;仕事;2021/6/24</item>
        <item>診断書クリア;30;仕事;2021/6/24</item>
        <item>病理所見クリア;30;仕事;2021/6/24,2021/6/26,2021/6/28</item>
        <item>サマリ-クリア;30;仕事;2021/6/28</item>
        <item>外来見直し;50;仕事;2021/6/30</item>
        <item>歯間ブラシ;30;生活;2021/6/29</item>
    </string-array>
    <string-array name="default_category_list">
        <item>整理</item>
        <item>運動</item>
        <item>記録</item>
        <item>未整理</item>
        <item>仕事</item>
        <item>生活</item>
    </string-array>

    <!-- contents  -->
    <string name="pushToHistory">History Fragmentへ移動</string>
    <string name="pushToMain">Main Fragmentへ移動</string>
    <string name="make_list_fromResource">サンプルのリストを作成する</string>
    <string name="edit_category_list">カテゴリーを編集する</string>
    <string name="move_date">日付の移動をします</string>
    <string name="add_item">アイテムを追加します</string>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efficient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
