<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="io.terameteo.listofaction.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_nav_home_to_categoryFragment"
            app:destination="@id/categoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="io.terameteo.listofaction.ui.DetailFragment"
        android:label="DetailFragment" >
        <action
            android:id="@+id/action_detailFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="idToEdit"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/categoryFragment"
        android:name="io.terameteo.listofaction.ui.CategoryFragment"
        android:label="CategoryFragment" >
        <action
            android:id="@+id/action_categoryFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>